# payment-operations-decision-reliability

./: .gitattributes  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  RELEASE_NOTES.md  pyproject.toml  requirements-modeling.txt
constraints/: ci.txt
contracts/: payment_ops_v04_release_contract.template.json  payment_risk_experiment_catboost_gpu.json  payment_risk_experiment_config.json  payment_risk_experiment_cpu.json  payment_risk_experiment_ibm_aml_catboost_gpu.json  payment_risk_experiment_ibm_aml_catboost_gpu_no_bank_identity_v093.json  payment_risk_experiment_ibm_aml_catboost_gpu_v092.json  payment_risk_experiment_ibm_aml_li_stress.json  payment_risk_experiment_ibm_aml_li_stress_v093.json  payment_risk_experiment_ibm_aml_medium_confirmatory_no_bank_identity_v094.json  payment_risk_experiment_ibm_aml_probe.json  synthetic_validation_contract.json
data/: iso20022_analytics.csv
docs/: LEGACY_OVERLAY_CONTEXT.md  MODEL_CARD_V094.md  V094_EVIDENCE.md  known_limitations.md  operations.md  release_qualification.md  v094_confirmatory_protocol.md
scripts/: apply_v093_hardening.py  benchmark_overlay.py  generate_synthetic_payment_risk.py  profile_aml_data.py  qualify_local.ps1  qualify_local.py  qualify_local.sh  render_v04_contract.py  run_champion_challenger.py  run_champion_challenger_v094.py  run_frozen_hi_to_li_v093.py  run_frozen_hi_to_li_v094.py  run_ibm_aml_local.ps1  run_ibm_aml_v092.ps1  run_ibm_aml_v093.ps1  run_ibm_aml_v094.ps1  run_modeling_local.ps1  validate_overlay.py  verify_distribution.py
tests/: test_bundle_inventory.py  test_cli.py  (+10 more)
(+15 files in other folders)
